:sparkles: Add notification api
