# backend/api/members/mypage.ctrl.js
@@ -4,7 +4,9 @@ require("dotenv").config();
 const { Membership } = require('../../models'); 
 const { Like } = require('../../models'); 
 const { Job } = require('../../models');
-
+const moment = require('moment');
+const sequelize = require("sequelize");
+const { and } = sequelize.Op;
 
 /* GET /api/mypage/like */
 exports.getLikelist = async (req, res) => {
@@ -81,5 +83,37 @@ exports.editProfile = async (req, res) => {
 /* POST /api/mypage/notification */
 exports.notifyDday = async (req, res) => {
     //마이페이지- 디데이알림
+    const { ifNotif, notifDay } = req.body;
+    const loggedID = res.locals.userid;
+    let likeList = []
+    try{
+        if (ifNotif === "false"){
+            const member = await Membership.update({ alert: 0 }, { where: { userid: loggedID }})
+            await Like.update({alertDate: "9999-01-01"}, {where: { userid: loggedID }})
+        }
+        else if (ifNotif === "true"){
+            const member = await Membership.update({ alert: notifDay }, { where: { userid: loggedID }})
+            likeList = await Like.findAll({ attributes: ['wantedAuthNo'], where: { userid: loggedID } })
+            for(const like of likeList){
+                const job = await Job.findOne({ attributes: ['receiptCloseDt'], where: {wantedAuthNo: like.wantedAuthNo} })
+                if(job.receiptCloseDt === "9999-01-01"){
+                    const update = await Like.update({alertDate: moment("9999-01-01", "YYYY-MM-DD")}, { where: {[and]: [{ userid: loggedID }, { wantedAuthNo: like.wantedAuthNo }]} })
+                }
+                else{
+                    const receiptCloseDt = moment(job.receiptCloseDt, 'YYYY-MM-DD');
+                    const alertMoment = receiptCloseDt.subtract(notifDay, 'days');
+                    await Like.update({ alertDate: moment(alertMoment).format('YYYY-MM-DD') }, { where: {[and]: [{ userid: loggedID }, { wantedAuthNo: like.wantedAuthNo }]} })
+                }
+            }
+           
+        }
+        else{
+            res.status(400).send();
+        }
+        res.status(200).send()
+    } catch(e){
+        console.error(e)
+        res.status(500).send();
+    }
 };
 
